@@ -3,6 +3,14 @@
 	reviewed by: Xavier Queralt
 
 	* flumotion/component/consumers/disker/disker.py:
+	Make sure we have the right values in multifdsink's client
+	stats to write the index
+
+2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	reviewed by: Xavier Queralt
+
+	* flumotion/component/consumers/disker/disker.py:
 	Make use of the helper function _openFile properly
 
 2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>
